2003-11-26  Kevin Vandersloot 

	* interface.c, load-graph.c, procman.c: Add support for smp
	systems. Should fix bug #91363
	
	* proctable.c: allow the columns to be shrunk to any size regardless
	of the colum label

2003-11-16  Havoc Pennington  <hp@redhat.com>

	* proctable.c: display X Server Memory column, and add it to 
	the overall Memory column

	* procman.h (struct _ProcInfo): add xserver_bytes field
	(struct _ProcInfo): add memxserver field

2003-11-14  Kaushal Kumar  <kaushal.kumar@wipro.com>

	* src/callbacks.c (cb_cpu_color_changed), 
	(cb_mem_color_changed), (cb_swap_color_changed):
	Changed the format for r,g,b to print as 4 digits 
	each, to ensure 'color' gets the correct code.
	Fixes bug #126612.

2003-11-22  Kevin Vandersloot

	* util.c, procdialogs.c: Fix hang when entering root password. Patch from
	Kiran Kumar Immidi. Fixes bug #126923

2003-11-19  Kevin Vandersloot

	* load-graph.c: Fix the memory display to display the correct memory usage
	given from libgtop.

2003-11-08  Kevin Vandersloot

	* load-graph.c: Fix the cpu graph showing initial values of zero. Fixes
	bug #119107

2003-11-08  Kevin Vandersloot

	* Makefile.am: remove DISABL_DEPRECATED flags to fix build on
	newer gtk's.

2003-09-21  Dennis Cranston <dennis_cranston at yahoo com>
	
	* procdialogs.c: Apply HIG fixes for the Preferences, Change 
	Priority, Hide, End, and Kill dialogs.  Fix compiler warnings.
	
	* favorites.c: Apply HIG fixes for the Manage Hidden Processes 
	dialog.  Fix compiler warnings.
	
	* memmaps.c: Apply HIG fixes the Memory Maps dialog. Fix compiler 
	warnings.
	
	* interface.c: Add missing mnemonics.  Fix compiler warnings.

2003-10-20  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: fix distchecking

2003-10-20  Bastien Nocera  <hadess@hadess.net>

	* callbacks.c: (cb_tree_key_press), (cb_update_disks):
	* memmaps.c: (add_new_maps), (update_memmaps_dialog):
	* proctable.c: (is_graphical), (get_info), (proctable_update_list):