@@ -1,3 +1,10 @@
+2004-01-07  Glynn Foster  <glynn.foster@sun.com>
+
+	* interface.c: (create_main_window): remove _with_mnemonic when it's 
+	not being used for that purpose.
+	* procdialogs.c: (procdialog_create_preferences_dialog): remove 
+	_with_mnemonic when it's not being used for that purpose. Fixes #130666.
+
 2003-11-26  Kevin Vandersloot 
 
 	* interface.c, load-graph.c, procman.c: Add support for smp
